[package]
name = "zcash_params"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0.126", features = ["derive"]}

[build-dependencies]
#hex = "0.4.3"
#jubjub = "0.8.0"
#byteorder = "^1.4"
group = "^0.11"
#ff = "^0.11"
#bls12_381 = "0.6.0"
#rand = "0.8.4"
#lazy_static = "1.4.0"

[dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "c708380ef59b254f71a7d0b417e03f44fd267c2d"

[build-dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "c708380ef59b254f71a7d0b417e03f44fd267c2d"

