[package]
name = "zcash_params"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0.126", features = ["derive"]}

[build-dependencies]
#hex = "0.4.3"
#jubjub = "0.8.0"
#byteorder = "^1.4"
group = "0.12.0"
ff = "0.12.0"
#bls12_381 = "0.6.0"
#rand = "0.8.4"
#lazy_static = "1.4.0"

[dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "f546cf86f4ee7191c9b85c51af86ed9c36bb9eb0"

[build-dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "f546cf86f4ee7191c9b85c51af86ed9c36bb9eb0"

