[package]
name = "zcash_params"
version = "0.2.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

[build-dependencies]
group = "0.13.0"
ff = "0.13.1"

[dependencies.zcash_primitives]
version = "0.22.0"
# git = "https://github.com/hhanh00/librustzcash.git"
# rev = "d5c3fbcc"
#path = "../../librustzcash/zcash_primitives"

[build-dependencies.zcash_primitives]
version = "0.22.0"
# git = "https://github.com/hhanh00/librustzcash.git"
# rev = "d5c3fbcc"
#path = "../../librustzcash/zcash_primitives"

[build-dependencies.sapling-crypto]
version = "0.5.0"

[build-dependencies.jubjub]
version = "0.10.0"
